# wasm_in_the_wasm

./: Cargo.toml  README.md  dfx.json  package-lock.json  package.json
src/hello_rust/: Cargo.toml  hello_rust.did  main.rs
